# securo

./: README.md
docs/: AUTHENTICATION_ARCHITECTURE.md  SECURITY_ARCHITECTURE.md  archi_actix.excalidraw
securo/: Cargo.toml  README.md
securo/examples/: authentication.rs
securo/src/: lib.rs
securo/src/client/: crypto.rs  pin.rs
securo/src/server/: crypto.rs  pin.rs
securoclient/: Cargo.toml
securoclient/src/: main.rs
securoclient/src/modules/: antidebug.rs  auth.rs
securoserv/: Cargo.toml
securoserv/src/: handlers.rs  main.rs
securoserv/src/db/: init.rs
