[package]
name = "securo"
version = "0.1.52"
edition = "2024"
authors = ["github.com/louislafosse"]
description = "Cryptographic impl for hybrid classical-post-quantum authentication and secure communication"
license = "MIT"  # or your preferred license
repository = "https://github.com/louislafosse/securo/tree/main/securo"
homepage = "https://github.com/louislafosse/securo"
documentation = "https://docs.rs/securo"
readme = "README.md"
keywords = ["cryptography", "kyber", "x25519", "ed25519", "tls"]
categories = ["cryptography", "authentication"]

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true
debug = false
# lto = "fat"

# RUSTFLAGS="-C target-cpu=native" cargo build --release

[profile.dev]
incremental = true
debug = true

[dependencies]
rustls = { version = "0.23.36", default-features = false, features = ["ring", "std"]}
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
base64 = "0.22"
uuid = { version = "1.20", features = ["v4", "serde"] }
crypto_box = "0.9.1"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"]}
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
pqc_kyber = { version = "0.7", features = ["kyber1024"] }
sha2 = "0.10"
hmac = "0.12"
webpki = { package = "rustls-webpki", version = "0.103.9" }
chacha20poly1305 = "0.10"
hkdf = "0.12"
